# devops-study-app

./: .release-please-manifest.json  mise.toml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml
scripts/: setup_project
src/backend/: CHANGELOG.md  pyproject.toml
src/backend/data/: sessions.csv
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: Dockerfile  pyproject.toml
